// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItem - current + marker 1`] = `
.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #262D33;
  margin-right: 0.5rem;
  width: 20px;
  height: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:hover .c3 {
  color: #C1C6CC;
}

.c4 .c3 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c5 .c3 {
  color: #262D33;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0 {
  background-color: #F5F6F7;
  color: #262D33;
  font-size: 0.875rem;
  font-weight: 700;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0:focus-within {
  box-shadow: 0 0 3px 1px #49a9f2;
  z-index: 1;
}

.c0::before {
  content: '';
  display: block;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
  background: #262D33;
  width: 4px;
}

.c0 .c3 {
  color: #262D33;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

<li
  aria-current="page"
  className="c0"
  color="#262D33"
  fontSize="small"
  fontWeight="bold"
>
  <button
    className="c1"
    role="menuitem"
  >
    <div
      className="c2 c3 "
      color="#262D33"
      size={20}
    >
      <svg
        fill="currentColor"
        height="100%"
        viewBox="0 0 24 24"
        width="100%"
      >
        <title>
          Home
        </title>
        <path
          d="M12 5.69l5 4.5V18h-2v-6H9v6H7V10.19l5-4.5zM12 3L2 12h3v8h6v-6h2v6h6v-8h3L12 3z"
          fill="currentColor"
        />
      </svg>
    </div>
    who!
  </button>
</li>
`;

exports[`MenuItem - current 1`] = `
.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #262D33;
  margin-right: 0.5rem;
  width: 20px;
  height: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:hover .c3 {
  color: #C1C6CC;
}

.c4 .c3 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0 {
  background-color: #F5F6F7;
  color: #262D33;
  font-size: 0.875rem;
  font-weight: 700;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0:focus-within {
  box-shadow: 0 0 3px 1px #49a9f2;
  z-index: 1;
}

.c0 .c3 {
  color: #262D33;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

<li
  aria-current="page"
  className="c0"
  color="#262D33"
  fontSize="small"
  fontWeight="bold"
>
  <button
    className="c1"
    role="menuitem"
  >
    <div
      className="c2 c3 "
      color="#262D33"
      size={20}
    >
      <svg
        fill="currentColor"
        height="100%"
        viewBox="0 0 24 24"
        width="100%"
      >
        <title>
          Home
        </title>
        <path
          d="M12 5.69l5 4.5V18h-2v-6H9v6H7V10.19l5-4.5zM12 3L2 12h3v8h6v-6h2v6h6v-8h3L12 3z"
          fill="currentColor"
        />
      </svg>
    </div>
    who!
  </button>
</li>
`;

exports[`MenuItem - detail 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #C1C6CC;
  padding-left: 1.25rem;
  margin-left: auto;
  margin-right: 1rem;
  font-size: 0.75rem;
}

.c0 {
  background-color: #FFFFFF;
  color: #4C535B;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0:focus-within {
  box-shadow: 0 0 3px 1px #49a9f2;
  z-index: 1;
}

.c0:hover {
  background: #F5F6F7;
  color: #262D33;
  font-size: #262D33;
  font-weight: #262D33;
}

.c0:hover .c3 {
  color: #C1C6CC;
}

.c0 .c3 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

<li
  className="c0"
  color="#4C535B"
  fontSize="small"
  fontWeight="normal"
>
  <button
    className="c1"
    role="menuitem"
  >
    who!
  </button>
  <div
    className="c2"
    color="#C1C6CC"
    fontSize="xsmall"
  >
    Is an excellent question
  </div>
</li>
`;

exports[`MenuItem - icon 1`] = `
.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #C1C6CC;
  margin-right: 0.5rem;
  width: 20px;
  height: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  background-color: #FFFFFF;
  color: #4C535B;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0:focus-within {
  box-shadow: 0 0 3px 1px #49a9f2;
  z-index: 1;
}

.c0:hover {
  background: #F5F6F7;
  color: #262D33;
  font-size: #262D33;
  font-weight: #262D33;
}

.c0:hover .c3 {
  color: #C1C6CC;
}

.c0 .c3 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

<li
  className="c0"
  color="#4C535B"
  fontSize="small"
  fontWeight="normal"
>
  <button
    className="c1"
    role="menuitem"
  >
    <div
      className="c2 c3 "
      color="#C1C6CC"
      size={20}
    >
      <svg
        fill="currentColor"
        height="100%"
        viewBox="0 0 24 24"
        width="100%"
      >
        <title>
          Beaker
        </title>
        <g
          clipPath="url(#Beaker_svg__clip0)"
        >
          <path
            d="M16.5 3.002A1.5 1.5 0 1016.5.001a1.5 1.5 0 00-.001 3zM12 4.503a1.501 1.501 0 10-.002-3.002A1.501 1.501 0 0012 4.503zm8.665 18.012c-1.506-2.898-4.165-9.014-4.165-9.014v-6h.75a.75.75 0 000-1.5h-9a.75.75 0 000 1.5H9v6s-2.601 6.331-4.072 9.16c-.696 1.341-.696 1.341.964 1.341h14.097c.67 0 1.45 0 .677-1.488l-.001.001zM10.5 13.502v-6H15v6l.642 1.5H9.89c.36-.879.609-1.5.609-1.5zm7.407 9H7.91c-1.383 0-1.383 0-.803-1.148.615-1.218 1.467-3.189 2.163-4.852h7.026c.707 1.606 1.559 3.501 2.177 4.723.643 1.276-.006 1.276-.566 1.276v.001z"
            fill="currentColor"
          />
        </g>
        <defs>
          <clipPath
            id="Beaker_svg__clip0"
          >
            <path
              d="M0 0h24v24H0z"
              fill="#fff"
            />
          </clipPath>
        </defs>
      </svg>
    </div>
    who!
  </button>
</li>
`;

exports[`MenuItem - with customizations 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  background-color: #BFB2FF;
  color: #1E1047;
  font-size: 0.875rem;
  font-weight: 700;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0:focus-within {
  box-shadow: 0 0 3px 1px #49a9f2;
  z-index: 1;
}

.c0::before {
  content: '';
  display: block;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
  background: #1E1047;
  width: 10px;
}

.c0 .c2 {
  color: #4F2ABA;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

<li
  aria-current="page"
  className="c0"
  color="#1E1047"
  fontSize="small"
  fontWeight="bold"
>
  <button
    className="c1"
    role="menuitem"
  >
    who!
  </button>
</li>
`;

exports[`MenuItem - with single customization 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  background-color: #4F2ABA;
  color: #262D33;
  font-size: 0.875rem;
  font-weight: 700;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0:focus-within {
  box-shadow: 0 0 3px 1px #49a9f2;
  z-index: 1;
}

.c0::before {
  content: '';
  display: block;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
  background: #262D33;
  width: 4px;
}

.c0 .c2 {
  color: #262D33;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

<li
  aria-current="page"
  className="c0"
  color="#262D33"
  fontSize="small"
  fontWeight="bold"
>
  <button
    className="c1"
    role="menuitem"
  >
    who!
  </button>
</li>
`;

exports[`MenuItem 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  padding-bottom: 0.75rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  color: inherit;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  background-color: #FFFFFF;
  color: #4C535B;
  font-size: 0.875rem;
  font-weight: 400;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: background 150ms cubic-bezier(0.86,0,0.07,1), color 150ms cubic-bezier(0.86,0,0.07,1);
}

.c0:focus-within {
  box-shadow: 0 0 3px 1px #49a9f2;
  z-index: 1;
}

.c0:hover {
  background: #F5F6F7;
  color: #262D33;
  font-size: #262D33;
  font-weight: #262D33;
}

.c0:hover .c2 {
  color: #C1C6CC;
}

.c0 .c2 {
  color: #C1C6CC;
  -webkit-transition: color 150ms cubic-bezier(0.86,0,0.07,1);
  transition: color 150ms cubic-bezier(0.86,0,0.07,1);
}

<li
  className="c0"
  color="#4C535B"
  fontSize="small"
  fontWeight="normal"
>
  <button
    className="c1"
    role="menuitem"
  >
    who!
  </button>
</li>
`;
